--- a/GFX_demo.ioc
+++ b/GFX_demo.ioc
@@ -162,7 +162,7 @@ ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
-ProjectManager.LibraryCopy=0
+ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
@@ -172,11 +172,11 @@ ProjectManager.ProjectName=GFX_demo
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x800
-ProjectManager.TargetToolchain=CMake
+ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
-ProjectManager.UnderRoot=false
+ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_CRC_Init-CRC-false-HAL-true,5-MX_DMA2D_Init-DMA2D-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.26.0-false-HAL-false,9-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.26.0-false-HAL-false
 RCC.48MHZClocksFreq_Value=90000000
 RCC.AHBFreq_Value=180000000
@@ -253,3 +253,4 @@ VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=custom
+rtos.0.ip=FREERTOS
